# benchmark_protocol

./: Cargo.toml  README.md
src/: additive_share_of_basic_table.rs  client.rs  cordinator.rs  gendata.rs  generate_data.rs  main.rs  p1.rs  p2.rs  p3.rs  p4.rs  primary.rs  t.rs  table.rs  truthtable.rs
