[package]
name = "benchmark_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
rand = "0.8.5"
round = "0.1.0"
mysql = "19.0"
rusqlite = "0.26.0"
bincode = "1.3.3"
byteorder = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "primary"
path = "src/primary.rs"

[[bin]]
name = "p2"
path = "src/p2.rs"

[[bin]]
name = "p3"
path = "src/p3.rs"

[[bin]]
name = "p4"
path = "src/cordinator.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "t"
path = "src/truthtable.rs"